# mei

./: .gitignore  .prettierrc.mjs  astro.config.mjs  build.sh  flake.nix  mod.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.types.json  wrangler.toml
.astro/: data-store.json  settings.json
.github/workflows/: deploy.yml  deploy.yml.old
.husky/: pre-commit
api/: hello.ts
assets/tokubetsu/: miku.json
assets/tokubetsu/bocchi/: kessoku.json
assets/tokubetsu/ll/: ikizulive.json  niji.json  sip.json  sunshine.json  superstar.json
native/: .gitignore  Cargo.toml  wasmer.toml
native/benches/: cc.rs
native/src/: computer_craft.rs  lib.rs  main.rs
native/src/computer_craft/: craftos.rs  mod.rs
native/src/computer_craft/quantizers/: exoquant.rs  imagequant.rs  mod.rs
native/src/computer_craft/serializers/: bimg.rs  mod.rs  rawmode.rs
src/: LoveLive.ts  env.d.ts  global.css  main.tsx  mei_native.ts  tokubetsu.ts  trpc.ts  twitch.tsx
src/cc/: render_image.ts
src/components/: Hatsuon.vue  HatsuonIsland.vue
src/layouts/: main.astro
src/pages/: _app.tsx  hatsuon.astro  index.astro  index.tsx  spotify.astro
src/pages/api/trpc/: [trpc].ts
src/pages/cc/: image.astro
src/server/trpc/: context.ts  native.ts  router.ts  spotify.ts  tokubetsu.ts  trpc.ts
src/trpc/: context.ts  native.ts  router.ts  tokubetsu.ts
types/: mod.d.ts
types/src/: mei_native.d.ts  tokubetsu.d.ts
types/src/server/trpc/: context.d.ts  native.d.ts  router.d.ts  spotify.d.ts  tokubetsu.d.ts  trpc.d.ts
