[workspace]
members = [
    "packages/rokujuuyon"
]

[package]
name = "mei-native"
version = "0.1.0"
authors = ["ninjawarrior1337 <me@treelar.xyz>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[workspace.dependencies]
image = { version = "0.24.4", default-features=false, features = ["jpeg", "png", "webp"], workspace = true }

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
image = {workspace = true}

hatsuon = "*"
rokujuuyon = { path = "./packages/rokujuuyon", default-features = false, features = ["imagequant"]}

[dev-dependencies]
criterion = "0.5.1"
wasm-bindgen-test = "0.3.13"

[[bench]]
name = "cc"
harness = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
